--- a/blog.html
+++ b/blog.html
@@ -11,9 +11,8 @@
   <link rel="stylesheet" href="./assets/css/blog.css" />
   <link rel="stylesheet" href="./assets/css/form.css" />
 
-  <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-  <script defer src="./assets/js/blog.js" type="text/javascript"></script>
-  <script defer src="./assets/js/form.js" type="text/javascript"></script>
+ 
+
 </head>
 
 <body>
@@ -22,28 +21,33 @@
       <h1>Welcome to My Blog</h1>
       <nav>
         <a href="index.html">Home</a>
-        <a href="create.html">Create a Blog Post</a>
+        <button class="toggle-mode">Dark</button>
       </nav>
     </header>
   
+  
     <!-- Main Content -->
     <main>
-      <section id="blog-posts">
         <h2>Blog Posts</h2>
+      <section id="blog-posts">
         <div id="post-list">
           <!-- Blog posts will be inserted here -->
         </div>
-        <p id="no-posts-message" style="display: none;">No blog posts to display.</p>
+        <!-- <p id="no-posts-message" style="display: none;">No blog posts to display.</p> -->
       </section>
+
+
+     <button class="back-button">Back</button>
     </main>
   
     <!-- Footer Section -->
     <footer>
       <p>&copy; 2024 My First Blog. All rights reserved.</p>
     </footer>
-  
+
+    <script src="./assets/js/logic.js" type="text/javascript"></script>
+    <script src="./assets/js/blog.js" type="text/javascript"></script>
   </body>
-  
   </html>
 
 
