--- a/blog.html
+++ b/blog.html
@@ -19,10 +19,11 @@
     <!-- Header Section -->
     <header>
       <h1>Welcome to My Blog</h1>
-      <nav>
+      <!-- <nav> -->
         <a href="index.html">Home</a>
-        <button class="toggle-mode">Dark</button>
-      </nav>
+        <button id="toggle" class="toggle-mode">Dark</button>
+        <button id="back" class="back-button">Back</button>
+      <!-- </nav> -->
     </header>
   
   
@@ -31,13 +32,10 @@
         <h2>Blog Posts</h2>
       <section id="blog-posts">
         <div id="post-list">
-          <!-- Blog posts will be inserted here -->
         </div>
-        <!-- <p id="no-posts-message" style="display: none;">No blog posts to display.</p> -->
       </section>
+      <!-- Dynamically create this in JS -->
 
-
-     <button class="back-button">Back</button>
     </main>
   
     <!-- Footer Section -->
